--- a/ChainLink-Client/src/styles/landing-page.css
+++ b/ChainLink-Client/src/styles/landing-page.css
@@ -114,7 +114,7 @@
 
     .landing-page-intro {
         flex-direction: column;
-        justify-content: flex-end;
+        justify-content: center;
         padding: 24px;
     }
 
