--- a/ChainLink-Client/src/styles/rides-feed.css
+++ b/ChainLink-Client/src/styles/rides-feed.css
@@ -7,23 +7,21 @@
 
 
 .rides-feed-grid {
-    padding: 48px;
+    display: flex;
+    flex-direction: row;
+    gap: 24px;
     width: 100%;
     max-width: 1000px;
     margin: auto;
-    display: flex;
-    flex-direction: row;
-    position: relative;
-    gap: 24px;
+    padding: 48px;
 }
 
 
 .rides-feed-filters {
-    padding: 24px;
-    max-height: none;
+    /* padding: 24px;
     max-width: 300px;
-    min-width: 220px;
-    width: 100%;
+    min-width: 220px; */
+    width: 300px;
     position: sticky;
     top: 48px;
     margin-bottom: 48px;
@@ -125,9 +123,10 @@
 /* Results */
 
 .rides-feed-results {
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
-    flex-grow: 1;
+    gap: 24px;
 }
 
 
@@ -160,21 +159,58 @@
     gap: 24px;
 }
 
+/* Toggle button */
+.filter-toggle-button {
+    display: none;
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+    padding: 12px;
+    border-radius: 8px;
+    font-size: 1em;
+    text-align: center;
+    cursor: pointer;
+    margin: 12px;
+}
 
+/* Overlay filters */
+.rides-feed-filters-overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: white;
+    z-index: 100;
+    overflow-y: auto;
+    padding: 24px;
+}
 
+.rides-feed-filters-overlay.active {
+    isplay: block;
+}
 
 
 @media only screen and (max-width: 1000px) {
     .rides-feed-grid {
-        padding: 0px;
         flex-direction: column;
+        padding: 12px;
     }
     .rides-feed-filters {
-        min-width: 100%;
-        position: inherit;
-        max-height: none;
-        padding: 0px;
+        display: none;
     }
+
+    .filter-toggle-button {
+        display: block;
+    }
+
+    .rides-feed-results {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: 24px;
+    }
+
     .rides-feed-filters > h4 {
         grid-column: span 2;
     }
