added logo to landing page

--- a/ChainLink-Client/src/styles/landing-page.css
+++ b/ChainLink-Client/src/styles/landing-page.css
@@ -29,6 +29,13 @@
     letter-spacing: 1px;
 }
 
+.landing-page-logo {
+    height: 60px;
+    width: auto;
+    display: block;
+    margin: 0 auto;
+  }
+
 .landing-page-auth-btns {
     display: flex;
     align-items: center;
