--- a/ChainLink-Client/src/styles/signup.css
+++ b/ChainLink-Client/src/styles/signup.css
@@ -52,6 +52,14 @@
   margin: 24px 0px;
 }
 
+.signup-form-logo {
+  height: 100px; /* Adjust the height as needed */
+  width: auto; /* Maintain the aspect ratio */
+  display: block; /* Ensure proper alignment */
+  margin: 0 auto; /* Center the logo */
+}
+
+
 .signup-strava-account-warning {
   font-size: 0.8em;
   font-weight: 400;
