--- a/ChainLink-Client/src/styles/landing-page.css
+++ b/ChainLink-Client/src/styles/landing-page.css
@@ -13,7 +13,6 @@
 
 /* HEADER */
 .landing-page-header {
-    z-index: 3;
     height: 120px;
     padding: 0px 48px;
     display: flex;
@@ -38,14 +37,17 @@
 .landing-page-login-btn {
     color: var(--dark-color);
     padding: 24px;
-    margin-right: 12px;  
+    margin-right: 12px;
+    font-weight: bold;
+    transition: color 0.2s ease-in-out 0.1s, transform 0.2s ease-in-out 0.1s;  
 }
+
+.landing-page-login-btn:hover {
+    transform: scale(1.1);
+    opacity: 0.9;
+}  
 
 /* BODY */
-
-.landing-page-body {
-
-}
 
 .landing-page-intro {
     display: flex;
@@ -59,32 +61,37 @@
 }
 
 .landing-page-intro img {
-    border-radius: 15%;   
+    border-radius: 15%;
+    /* 
     width: min(60vw, 900px);      
-    height: auto;                 
+    height: auto;
+    */
+    width: 500px;
+    height: 425px;              
     object-fit: cover;            
     max-height: 600px;
-    border: solid 3px var(--primary-color);             
+    border: solid 7px var(--primary-color);             
   }
 
 
 .landing-page-intro-text {
     margin-left: 48px;
     color: var(--dark-color);
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    text-align: left;
 }
 .landing-page-intro-text > h1 {
-    font-size: clamp(2rem, 5vw, 3.5rem);
+    font-size: 3.5rem;
+    gap: 0;
     margin: 0px;
 }
 .landing-page-intro-text > p {
     font-weight: 400;
-    font-size: clamp(1rem, 2vw, 1.2rem);
+    font-size: 1.2rem;
     opacity: 0.7;
     margin-bottom: 24px;
-}
-
-.landing-page-get-started {
-    max-width: 240px;
 }
 
 
@@ -93,8 +100,8 @@
         padding-top: 24px;
         flex-direction: column;
         gap: 20px;
-        color: white !important;
-        text-shadow: 2px 2px 30px rgba(0, 0, 0, 0.512), 2px 2px 5px #00000058;
+        color: white;
+        text-shadow: 2px 2px 15px var(--primary-color), 1px 1px 5px var(--primary-color);
         z-index: 10;
         position: relative;
         height: auto;
@@ -104,29 +111,45 @@
     
 
     .landing-page-login-btn {
-        background-color: white;
+        background-color: var(--secondary-color);
         padding: 12px 48px;
         border-radius: 8px;
         text-shadow: none;
-        border: 2px solid var(--primary-color);
+        border: 1px solid var(--primary-color);
         color: var(--primary-color);
+    }
+
+    .landing-page-auth-btns {
+        margin-top: 24px;
     }
 
     .landing-page-intro {
         flex-direction: column;
         justify-content: center;
-        padding: 24px;
+        padding: 0 60px 0 60px;
+        gap: 24px;
     }
 
-    .landing-page-intro > img {
-        transform: translateY(-3%);
+    .landing-page-intro img {
+        width: 352.9px;
+        height: 300px;
+    }
+
+    .landing-page-intro-text > h1 {
+        font-size: 2rem; 
+    }
+    
+    .landing-page-intro-text > p {
+        font-size: 1rem;
     }
 
     .landing-page-intro-text {
         margin: 0px;
+        align-items: center; 
+        text-align: center;
     }
 
     .landing-page-get-started {
-        max-width: 100%;
+        margin-bottom: 96px;
     }
 }
