implemented club photo storage and UI

--- a/ChainLink-Client/src/styles/profile-page.css
+++ b/ChainLink-Client/src/styles/profile-page.css
@@ -333,6 +333,7 @@
     display: flex;
     gap: 1rem;
     width: 100%;
+    max-height: 30rem;
 }
 
 /* User List (Shamelessly Copied From 'ride-feed-card.css') */
