--- a/ChainLink-Client/src/styles/club-page.css
+++ b/ChainLink-Client/src/styles/club-page.css
@@ -283,6 +283,23 @@
   padding-top: 15px;
 }
 
+
+.user-image img,
+.user-image {
+    display: flex;
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    background-color: var(--primary-color);
+    border: 2px solid var(--dark-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 3em;
+    color: white;
+    position: relative;
+}
+
 /* ===================================================================
     Responsive (below 800px)
     =================================================================== */
